[package]
name = "oxhttp"
version = "0.2.3"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/oxhttp"
keywords = ["HTTP"]
repository = "https://github.com/oxigraph/oxhttp"
description = """
Very simple implementation of HTTP 1.1 (both client and server)
"""
edition = "2021"
rust-version = "1.70"

[dependencies]
flate2 = { version = "1", optional = true }
httparse = "1.8"
native-tls = { version = "0.2.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1.2", optional = true }
rustls-platform-verifier = { version = "0.3", optional = true }
webpki-roots = { version = "0.26", optional = true }
url = "2.4"

[features]
default = ["client", "server"]
rustls-ring-platform-verifier = ["rustls/ring", "rustls-pki-types", "rustls-platform-verifier"]
rustls-ring-native = ["rustls/ring", "rustls-native-certs", "rustls-pki-types"]
rustls-ring-webpki = ["rustls/ring", "rustls-pki-types", "webpki-roots"]
rustls-aws-lc-platform-verifier = ["rustls/aws_lc_rs", "rustls-pki-types", "rustls-platform-verifier"]
rustls-aws-lc-native = ["rustls/aws_lc_rs", "rustls-native-certs", "rustls-pki-types"]
rustls-aws-lc-webpki = ["rustls/aws_lc_rs", "rustls-pki-types", "webpki-roots"]
client = []
server = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
