[package]
name = "oxhttp"
version = "0.3.1"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/oxhttp"
keywords = ["HTTP"]
repository = "https://github.com/oxigraph/oxhttp"
description = """
Simple implementation of HTTP 1.1 (both client and server)
"""
edition = "2021"
rust-version = "1.74"

[dependencies]
flate2 = { version = "1", optional = true, default-features = false }
http = "1.1"
httparse = "1.8"
url = { version = "2.4", optional = true }
native-tls = { version = "0.2.11", optional = true }
rustls = { version = "0.23.27", optional = true, default-features = false, features = ["std", "tls12"] }
rustls-pki-types = { version = "1.11", optional = true }
rustls-platform-verifier = { version = "0.6", optional = true }
webpki-roots = { version = ">=0.26,<2.0", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "3"
flate2 = "*" # To enable the default backend

[features]
default = ["client", "server"]
native-tls = ["dep:native-tls"]
rustls-ring-native = ["dep:rustls", "rustls/ring", "dep:rustls-platform-verifier", "dep:rustls-pki-types"]
rustls-ring-webpki = ["dep:rustls", "rustls/ring", "dep:rustls-pki-types", "dep:webpki-roots"]
rustls-aws-lc-native = ["dep:rustls", "rustls/aws_lc_rs", "dep:rustls-platform-verifier", "dep:rustls-pki-types"]
rustls-aws-lc-webpki = ["dep:rustls", "rustls/aws_lc_rs", "dep:rustls-pki-types", "dep:webpki-roots"]
client = ["dep:url"]
server = []
flate2 = ["dep:flate2"]

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
